# phantomx_arm_pkgs

./: .gitignore  README.md
phantomx_description/: CMakeLists.txt  package.xml
phantomx_description/config/: phantomx.rviz  phantomx.yaml  phantomx_kinect.rviz
phantomx_description/launch/: phantomx_mimic.launch  phantomx_rviz.launch  sim_phantomx.launch
phantomx_description/meshes/: Base.ipt  Base_NOBOTTOMPLATE.ipt  Bicep.ipt  Bicep.stl  Guide_Rail_Fixed.stl  PX-Gripper.stl  Pincher_SOLID.iam  Pincher_SOLID.stl  Pincher_SOLID.stp  Shoulder.ipt  Shoulder.stl  Wrist.stl  finger.blend  finger.stl
phantomx_description/urdf/: ensemble.urdf  materials.xacro  phantomx.gazebo  phantomx.urdf  phantomx_for_tb.gazebo  phantomx_for_turtlebot.xacro  phantomx_mimic.xacro  phantomx_turtlebot_ensemble.xacro  robot.xml
phantomx_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
phantomx_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  phantomx.srdf  sensors.yaml
phantomx_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  follow_controller.py  move_group.launch  moveit.rviz  moveit_rviz.launch  nona_moveit_bringup.launch  ompl_planning_pipeline.launch.xml  phantomx_moveit_controller_manager.launch.xml  phantomx_moveit_sensor_manager.launch.xml  planning_context.launch  planning_pipeline.launch.xml  qiu_move_group.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  topic_etude.txt  trajectory_execution.launch.xml  (+1 more)
