<?xml version="1.0"?>
<package>
  <name>phantomx_description</name>
  <version>0.0.0</version>
  <description>The phantomx_description package</description>

  <maintainer email="qiuzhaopeng@gmail.com">Zhaopeng QIU</maintainer>

  <license>BSD</license>


  <author email="qiuzhaopeng@gmail.com">Zhaopeng QIU</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
